// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the H3 component should accept additional props 1`] = `
<Text
  accessible={false}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Object {
      "color": "#303030",
      "fontFamily": "Colfax-Bold",
      "fontSize": 32.4,
      "lineHeight": 41.04,
      "paddingBottom": 2.7,
      "paddingTop": 5.4,
    }
  }
>
  "The Christian shoemaker does his duty not by putting little crosses on the shoes, but by making good shoes, because God is interested in good craftsmanship." ― Martin Luther
</Text>
`;

exports[`the H3 component should accept and render passed in styles 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Object {
      "color": "salmon",
      "fontFamily": "Colfax-Bold",
      "fontSize": 32.4,
      "lineHeight": 41.04,
      "paddingBottom": 2.7,
      "paddingTop": 5.4,
    }
  }
>
  Salmon text
</Text>
`;

exports[`the H3 component should render correctly 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Object {
      "color": "#303030",
      "fontFamily": "Colfax-Bold",
      "fontSize": 32.4,
      "lineHeight": 41.04,
      "paddingBottom": 2.7,
      "paddingTop": 5.4,
    }
  }
>
  Default H3 text
</Text>
`;
